--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <p><a href="./recipes/pulled-pork.html">Pulled Pork -v1</a></p>
     </body>
 </html>
