Add image and description. Image had to be resized

--- a/recipes/pulled-pork.html
+++ b/recipes/pulled-pork.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1>Pulled Pork - v1</h1>
+        <p><img src="../img/pulledporkpic.jpg" alt="photo of cooked pulled pork inside a duth oven" width="400" height="auto"></p>
+        <h3>Description</h3>
+        <p>Braised pulled pork recipe. Use pork shoulder or boston butt.</p>
+        <p><strong>Cook Time ~5hr</strong></p>
     </body>
 </html>
