Add list of ingredients to pulled pork

--- a/recipes/pulled-pork.html
+++ b/recipes/pulled-pork.html
@@ -10,5 +10,14 @@
         <h3>Description</h3>
         <p>Braised pulled pork recipe. Use pork shoulder or boston butt.</p>
         <p><strong>Cook Time ~5hr</strong></p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>4 lb pork shoulder or pork butt</li>
+            <li>16 oz lager</li>
+            <li>1 tbsp brown sugar</li>
+            <li>1 tbsp garlic powder</li>
+            <li>1 tsp cumin</li>
+        </ul>
+
     </body>
 </html>
