Change recipe, add ingredients and steps

--- a/recipes/pulled-pork.html
+++ b/recipes/pulled-pork.html
@@ -12,12 +12,26 @@
         <p><strong>Cook Time ~5hr</strong></p>
         <h3>Ingredients</h3>
         <ul>
-            <li>4 lb pork shoulder or pork butt</li>
-            <li>16 oz lager</li>
-            <li>1 tbsp brown sugar</li>
-            <li>1 tbsp garlic powder</li>
-            <li>1 tsp cumin</li>
+            <li><strong>4 lb.</strong> boneless pork butt</li>
+            <li><strong>3 tbsp.</strong> packed brown sugar</li>
+            <li><strong>1 tbsp.</strong> kosher salt</li>
+            <li><strong>1 tbsp.</strong> smoked paprika</li>
+            <li><strong>1 tsp.</strong> garlic powder</li>
+            <li><strong>1 tsp.</strong> ground cumin</li>
+            <li><strong>1 tsp.</strong> onion powder</li>
+            <li>Freshly ground black pepper</li>
+            <li><strong>2 tbsp.</strong> vegetable oil</li>
+            <li><strong>12 oz.</strong> lager</li>
+            
         </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat oven to 300°. Trim excess fat from pork and cut into large pieces to fit in a large Dutch oven</li>
+            <li>In a small bowl, combine brown sugar, salt, paprika, garlic powder, cumin, and onion powder; season with black pepper. Rub all over pork (This can be done the night before)</li>
+            <li>In large Dutch oven over medium high heat, heat oil. Working in batches, cook pork until browned on all sides, about 2 minutes per side (Spices can burn quickly, so don't let it go for too long!) Pour beer around pork and cover with a lid</li>
+            <li>Bake until pork is just beginning to turn tender, about 3 hours. Uncover and continue to bake until pork is very tender and easily pulls apart with a fork, 1 to 2 hours more</li>
+            <li>Transfer pork to a cutting board, reserving pan drippings in pot, and let rest until ready to use</li>
+        </ol>
 
     </body>
 </html>
