Add back button to recipe pages

--- a/recipes/anchovy-caper.html
+++ b/recipes/anchovy-caper.html
@@ -29,6 +29,7 @@
             <li>While the pasta is cooking, warm the olive oil in a small skillet over medium heat. Add the garlic and cook for about 1 minute, without letting it brown. Stir in the anchovies, capers and red pepper and cook for a half-minute more, then turn off the heat.</li>
             <li>Drain the pasta and return it to the pot. Pour in the garlic mixture, add the parsley, if using, and toss well to coat. Serve with grated Parmesan if desired.</li>
         </ol>
+        <a href="../index.html">Back</a>
 
     </body>
 </html>
