--- a/recipes/chickpeas-longa.html
+++ b/recipes/chickpeas-longa.html
@@ -29,6 +29,7 @@
             <li>Incorpore el caldo, la patata y el laurel y programe 22 min/100C/giro inverso/vel 1</li>
             <li>Añada los garbanzos y programe 12 min/100°C/giro inverso/vel cuchara . Vierta en una sopera, deje reposar unos minutos y sirva caliente.</li>
         </ol>
+        <a href="../index.html">Back to index</a>
 
     </body>
 </html>
