--- a/recipes/pulled-pork.html
+++ b/recipes/pulled-pork.html
@@ -32,6 +32,7 @@
             <li>Bake until pork is just beginning to turn tender, about 3 hours. Uncover and continue to bake until pork is very tender and easily pulls apart with a fork, 1 to 2 hours more</li>
             <li>Transfer pork to a cutting board, reserving pan drippings in pot, and let rest until ready to use</li>
         </ol>
+        <a href="../index.html">Back to index</a>
 
     </body>
 </html>
